more color tweaks

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -293,17 +293,48 @@ Holder.addTheme("gray", {
     <span class="text-warning">Warning sample text</span><br />
     <span class="text-danger">Danger sample text</span><br />
     <span class="text-muted">Muted sample text</span><br />
+    <span class="text-light bg-dark">Light sample text</span><br />
+    <span class="text-dark">Dark sample text</span><br />
+    <span class="text-light bg-dark">White sample text</span><br />
+    <span class="text-black">Black sample text</span><br />
+</p>
+<p>
+    <a href="#" class="text-primary">Primary sample text</a><br />
+    <a href="#" class="text-success">Success sample text</a><br />
+    <a href="#" class="text-info">Info sample text</a><br />
+    <a href="#" class="text-warning">Warning sample text</a><br />
+    <a href="#" class="text-danger">Danger sample text</a><br />
+    <a href="#" class="text-muted">Muted sample text</a><br />
+    <a href="#" class="text-light bg-dark">Light sample text</a><br />
+    <a href="#" class="text-dark">Dark sample text</a><br />
+    <a href="#" class="text-light bg-dark">White sample text</a><br />
+    <a href="#" class="text-black">Black sample text</a><br />
 </p>
 
 <h3>Background - context</h3>
 <p>
-    <span class="bg-primary">Primary sample text</span><br />
-    <span class="bg-success">Success sample text</span><br />
-    <span class="bg-info">Info sample text</span><br />
-    <span class="bg-warning">Warning sample text</span><br />
-    <span class="bg-danger">Danger sample text</span><br />
-    <span class="bg-inverse">Inverse sample text</span><br />
-    <span class="bg-faded">Faded sample text</span><br />
+    <span class="bg-primary">Primary sample background</span><br />
+    <span class="bg-success">Success sample background</span><br />
+    <span class="bg-info">Info sample background</span><br />
+    <span class="bg-warning text-dark">Warning sample background</span><br />
+    <span class="bg-danger">Danger sample background</span><br />
+    <span class="bg-light">Light sample background</span><br />
+    <span class="bg-dark text-light">Dark sample background</span><br />
+    <span class="bg-body">Body sample background</span><br />
+    <span class="bg-white">White sample background</span><br />
+    <span class="bg-black text-light">Black sample background</span><br />
+</p>
+<p>
+    <a href="#" class="bg-primary text-white">Primary sample background</a><br />
+    <a href="#" class="bg-success text-white">Success sample background</a><br />
+    <a href="#" class="bg-info text-white">Info sample background</a><br />
+    <a href="#" class="bg-warning text-dark">Warning sample background</a><br />
+    <a href="#" class="bg-danger text-white">Danger sample background</a><br />
+    <a href="#" class="bg-light">Light sample background</a><br />
+    <a href="#" class="bg-dark text-light">Dark sample background</a><br />
+    <a href="#" class="bg-body">Body sample background</a><br />
+    <a href="#" class="bg-white">White sample background</a><br />
+    <a href="#" class="bg-black text-light">Black sample background</a><br />
 </p>
 
 <h3>Unordered List</h3>
@@ -1596,9 +1627,9 @@ Showing a <kbd>kdb sample</kbd>
 <button type="button" class="btn btn-info" disabled>Info</button>
 <button type="button" class="btn btn-warning" disabled>Warning</button>
 <button type="button" class="btn btn-danger" disabled>Danger</button>
-<button type="button" class="btn btn-link" disabled>Link</button>
 <button type="button" class="btn btn-light" disabled>Light</button>
 <button type="button" class="btn btn-dark" disabled>Dark</button>
+<button type="button" class="btn btn-link" disabled>Link</button>
 </p>
 <p>
 <button type="button" class="btn btn-outline" disabled>Default</button>
