update visual tests and card/color docs

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3361,7 +3361,9 @@ Anchor variants:<br />
 <h3>Card</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3373,7 +3375,9 @@ Anchor variants:<br />
 <h3>Card - content types</h3>
 <div class="card-sample">
     <div class="card">
-      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3398,7 +3402,9 @@ Anchor variants:<br />
     </div>
 
     <div class="card">
-      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
@@ -3418,7 +3424,9 @@ Anchor variants:<br />
         <h4 class="card-title">Card title</h4>
         <h6 class="card-subtitle text-muted">Support card subtitle</h6>
       </div>
-      <img data-src="holder.js/100px150/?text=Image Cap" alt="Card image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="card-link">Card link</a>
@@ -3536,7 +3544,9 @@ Anchor variants:<br />
 
     <h3>Card - image caps</h3>
     <div class="card">
-      <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3549,13 +3559,28 @@ Anchor variants:<br />
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <img class="card-img-bottom img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+      <div class="card-img card-img-bottom">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">This is a card with text and a nested image.</p>
+        <div class="card-img mb-0_5">
+          <img class="img-fluid" src="../../docs/assets/img/test.gif" alt="Card image">
+        </div>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
     </div>
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <img src="../../docs/assets/img/test.gif" class="card-img img-fluid" alt="Card image" style="width: 100%; opacity: .3;">
-      <div class="card-img-overlay">
+      <div class="card-img card-img-top card-img-bottom">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
+      <div class="card-img-overlay text-white">
         <h4 class="card-title">Card title</h4>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -3613,7 +3638,7 @@ Anchor variants:<br />
     <div class="card bg-light text-dark">
       <div class="card-header">Header</div>
       <div class="card-body">
-        <h5 class="card-title">Danger card</h5>
+        <h5 class="card-title">Light card</h5>
         <h6 class="card-subtitle">Subtitle text</h6>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -3621,7 +3646,7 @@ Anchor variants:<br />
     <div class="card bg-dark text-light">
       <div class="card-header">Header</div>
       <div class="card-body">
-        <h5 class="card-title">Danger card</h5>
+        <h5 class="card-title">Dark card</h5>
         <h6 class="card-subtitle">Subtitle text</h6>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -3719,7 +3744,9 @@ Anchor variants:<br />
 <div class="card-sample">
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3727,7 +3754,9 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3735,7 +3764,9 @@ Anchor variants:<br />
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3748,7 +3779,9 @@ Anchor variants:<br />
 <h3>Card deck</h3>
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <div class="card-img card-img-top">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3756,7 +3789,9 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <div class="card-img card-img-top">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3764,7 +3799,9 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+    <div class="card-img card-img-top">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3800,7 +3837,9 @@ Anchor variants:<br />
 
 <div class="card-columns">
   <div class="card">
-    <img class="card-img-top img-fluid" data-src="holder.js/100px150" alt="Card image cap">
+    <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
     <div class="card-body">
       <h4 class="card-title">Card title that wraps to a new line</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3818,7 +3857,9 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top img-fluid" data-src="holder.js/100px150" alt="Card image cap">
+    <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
       <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -3838,7 +3879,9 @@ Anchor variants:<br />
     </div>
   </div>
   <div class="card">
-    <img class="card-img img-fluid" data-src="holder.js/100px200" alt="Card image" />
+    <div class="card-img card-img-top">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      </div>
   </div>
   <div class="card text-end">
     <div class="card-body">
@@ -4155,7 +4198,7 @@ $('#slider2').CFW_Slider({
 <h3>Palette Colors:</h3>
 
 <div class="row">
-     <div class="palette col-sm-4 col-lg-2">
+     <div class="palette col-sm-6 col-md-4 col-lg-2">
         Primary:<br />
         <div class="palette-item bg-primary-50">50</div>
         <div class="palette-item bg-primary-100">100</div>
@@ -4169,7 +4212,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-primary-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Secondary:<br />
         <div class="palette-item bg-secondary-50">50</div>
         <div class="palette-item bg-secondary-100">100</div>
@@ -4183,7 +4226,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-secondary-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Success:<br />
         <div class="palette-item bg-success-50">50</div>
         <div class="palette-item bg-success-100">100</div>
@@ -4197,7 +4240,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-success-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Info:<br />
         <div class="palette-item bg-info-50">50</div>
         <div class="palette-item bg-info-100">100</div>
@@ -4211,7 +4254,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-info-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Warning:<br />
         <div class="palette-item bg-warning-50">50</div>
         <div class="palette-item bg-warning-100">100</div>
@@ -4225,7 +4268,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-warning-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Danger:<br />
         <div class="palette-item bg-danger-50">50</div>
         <div class="palette-item bg-danger-100">100</div>
@@ -4238,10 +4281,8 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-danger-800 text-light">800</div>
         <div class="palette-item bg-danger-900 text-light">900</div>
     </div>
-</div>
 
-<div class="row">
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         UI Base:<br />
         <div class="palette-item bg-uibase-50">50</div>
         <div class="palette-item bg-uibase-100">100</div>
@@ -4255,7 +4296,7 @@ $('#slider2').CFW_Slider({
         <div class="palette-item bg-uibase-900 text-light">900</div>
     </div>
 
-    <div class="palette col-sm-4 col-lg-2">
+    <div class="palette col-sm-6 col-md-4 col-lg-2">
         Grayscale:<br />
         <div class="palette-item bg-gray-50">50</div>
         <div class="palette-item bg-gray-100">100</div>
