--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -51,7 +51,9 @@ Holder.addTheme("gray", {
 
     <div class="card-deck-sm">
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -59,7 +61,9 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -75,7 +79,9 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -122,7 +128,9 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -130,7 +138,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -146,7 +156,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -191,7 +203,9 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
+        <div class="card-img card-img-top">
+            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -207,7 +221,9 @@ Holder.addTheme("gray", {
     <h3>Deck</h3>
     <div class="card-deck-md">
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -217,7 +233,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -227,7 +245,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -242,7 +262,9 @@ Holder.addTheme("gray", {
 
     <div class="card-group-md">
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -252,7 +274,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -262,7 +286,9 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img card-img-top">
+          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -305,14 +331,18 @@ Holder.addTheme("gray", {
 
     <div class="card-deck card-deck-col">
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <div class="card">
@@ -326,14 +356,18 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top img-fluid" data-src="holder.js/100px150/" alt="Card image cap">
+            <div class="card-img card-img-top">
+                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a card with some amount of text. This is a card with some amount of text.</p>
