CSS-only checkbox/radio buttons

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -337,6 +337,18 @@ $(window).ready(function() {
             &nbsp;
             <button type="button" data-cfw="button" class="btn btn-info active">Single toggle</button>
             </p>
+            <p>
+                <div class="btn-check">
+                    <input id="newTog0" type="checkbox" class="btn-check-input">
+                    <label for="newTog0" class="btn btn-info">Single toggle</label>
+                </div>
+                &nbsp;
+                <div class="btn-check">
+                    <input id="newTog1" type="checkbox" class="btn-check-input" checked>
+                    <label for="newTog1" class="btn btn-info">Single toggle</label>
+                </div>
+
+            </p>
 
             <div class="row mb-1">
                 <div class="col-12">
@@ -401,6 +413,22 @@ $(window).ready(function() {
                         <label class="btn btn-outline-info">
                             <input type="radio" name="options1" /> Radio 3
                         </label>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="btn-group">
+                        <div class="btn-check">
+                            <input id="options2-1" type="radio" name="options2" class="btn-check-input" checked>
+                            <label for="options2-1" class="btn btn-info">Radio 1</label>
+                        </div>
+                        <div class="btn-check">
+                            <input id="options2-2" type="radio" name="options2" class="btn-check-input" checked>
+                            <label for="options2-2" class="btn btn-info">Radio 2</label>
+                        </div>
+                        <div class="btn-check">
+                            <input id="options2-3" type="radio" name="options2" class="btn-check-input" checked>
+                            <label for="options2-3" class="btn btn-info">Radio 3</label>
+                        </div>
                     </div>
                 </div>
             </div>
