btn states, visual tests

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -89,16 +89,19 @@
 
     <hr />
 
-    <div class="btn-group-vertical" data-cfw="buttons" role="group">
-        <label class="btn btn-info">
-            <input type="checkbox" /> One
-        </label>
-        <label class="btn btn-info">
-            <input type="checkbox" /> Two
-        </label>
-        <label class="btn btn-info">
-            <input type="checkbox" /> Three
-        </label>
+    <div class="btn-group-vertical">
+        <div class="btn-check">
+            <input id="checkbox2" type="checkbox" class="btn-check-input" checked>
+            <label for="checkbox2" class="btn btn-info">Check 1</label>
+        </div>
+        <div class="btn-check">
+            <input id="checkbox3" type="checkbox" class="btn-check-input">
+            <label for="checkbox3" class="btn btn-info">Check 2</label>
+        </div>
+        <div class="btn-check">
+            <input id="checkbox4" type="checkbox" class="btn-check-input">
+            <label for="checkbox4" class="btn btn-info">Check 3</label>
+        </div>
     </div>
 
     <hr />
